apps/passbolt/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passbolt-http
  labels:
    app.kubernetes.io/name: passbolt
    app.kubernetes.io/instance: passbolt
    app.kubernetes.io/action: common
    app.kubernetes.io/type: svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: passbolt
    app.kubernetes.io/instance: passbolt
