apps/passbolt/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passbolt-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Passbolt
    hajimari.io/icon: logos:passbolt-icon
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/target: homelab-tunnel.karpfen.dev
spec:
  ingressClassName: nginx
  rules:
    - host: &host passbolt.karpfen.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passbolt-http
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: passbolt-tls
